<?xml version="1.0"?>
<package format="3">
  <name>triangle_service_client_package</name>
  <version>0.0.1</version>
  <description>ROS2 üçgen hesaplama servisi</description>
  <maintainer email="yildizozkan6541@gmail.com">ozkan</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependency (tek sefer yaz yeterli) -->
  <exec_depend>rclpy</exec_depend>

  <!-- Custom srv için gerekli -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Test bağımlılıkları (opsiyonel) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
